// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cfn-deploy should successfully update existing stack 1`] = `
Object {
  "TemplateBody": "Resources:
  HelloBucket:
    Type: AWS::S3::Bucket
",
}
`;

exports[`cfn-deploy should successfully update existing stack 2`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 3`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 4`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully update existing stack 5`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 6`] = `
Object {
  "Capabilities": undefined,
  "ChangeSetName": "cfn-deploy",
  "ChangeSetType": "UPDATE",
  "Description": "Created with cfn-deploy",
  "StackName": "existing-stack",
  "TemplateBody": "Resources:
  HelloBucket:
    Type: AWS::S3::Bucket
",
}
`;

exports[`cfn-deploy should successfully update existing stack 7`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully update existing stack 8`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 9`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully update existing stack 10`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 11`] = `
Object {
  "type": "UPDATE",
}
`;
